# GameEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README  profiler.txt
Assets/: badTempLevel.txt
Engine/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  Cache.h  Camera.cpp  Camera.h  Component.cpp  Cube.cpp  Cube.h  CubeMap.cpp  CubeMap.h  DirectionalLight.cpp  DirectionalLight.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Entity3D.cpp  Entity3D.h  FrameBuffer.cpp  FrameBuffer.h  Light.cpp  Light.h  LightConstants.h  Lights.h  Material.cpp  Material.h  MaterialCubeMap.cpp  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  PointLight.cpp  PointLight.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  Skybox.cpp  Skybox.h  (+13 more)
Engine/3dPrimitives/: Cube.cpp  Cube.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
Engine/Components/: Component.cpp  Component.h  TimerComponent.h
Engine/Entity/: Entity3D.cpp
Engine/Graphics/: Material.cpp  MaterialCubeMap.cpp  Shader.cpp  Shader.h  ShadowMap.cpp  Skybox.cpp  VertexLayouts.h
Engine/MemoryManager/: AssetManager.h
Engine/Source/: Engine.cpp  Engine.h  EngineContext.h
Engine/Source/3dPrimitives/: Cube.cpp  Cube.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
Engine/Source/Animation/: Animation.cpp  Animation.h  Bone.cpp  Bone.h  BoneData.h  Skeleton.cpp  Skeleton.h
Engine/Source/Audio/: AudioSystem.cpp  AudioSystem.h  Sound.cpp  Sound.h
Engine/Source/Components/: AnimationComponent.cpp  AnimationComponent.h  AnimationComponent3D.cpp  AnimationComponent3D.h  BackgroundSpriteComponent.cpp  BackgroundSpriteComponent.h  CollisionComponent.cpp  CollisionComponent.h  Component.cpp  Component.h  MoveComponent.cpp  MoveComponent.h  MoveComponent2D.cpp  MoveComponent2D.h  SpriteComponent.cpp  SpriteComponent.h  TransformComponent.cpp  TransformComponent.h
Engine/Source/EngineUI/: Editor.cpp  Editor.h  EngineUI.cpp  EngineUI.h  imgui_impl_sdl2.cpp  uiTest.txt
Engine/Source/Entity/: Entity.cpp  Entity.h  Entity2D.cpp  Entity2D.h  Entity3D.cpp  Entity3D.h
Engine/Source/Graphics/: Camera.cpp  Camera.h  CubeMap.cpp  CubeMap.h  FrameBuffer.cpp  FrameBuffer.h  FrameBufferMultiSampled.cpp  FrameBufferMultiSampled.h  Lights.cpp  Lights.h  Material.cpp  Material.h  MaterialCubeMap.cpp  MaterialCubeMap.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  PointShadowMap.cpp  PointShadowMap.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  ShaderUniforms.h  ShadowMap.cpp  ShadowMap.h  Skybox.cpp  Skybox.h  SpriteRenderer.cpp  SpriteRenderer.h  Text.cpp  (+9 more)
Engine/Source/Input/: InputSystem.cpp  InputSystem.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
Engine/Source/MemoryManager/: AssetManager.cpp  AssetManager.h  Cache.h
Engine/Source/Multithreading/: JobManager.cpp  JobManager.h
Engine/Source/Physics/: Physics.cpp  Physics.h
Engine/Source/Profiler/: Profiler.cpp  Profiler.h
Engine/Source/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Engine/Source/UI/: EditorUI.cpp  EditorUI.h
Engine/Source/Util/: AssimpGlmHelper.h  Console.cpp  Console.h  Logger.cpp  Logger.h  LoggerMacros.h  Profiler.cpp  Random.cpp  Random.h
Game/: CMakeLists.txt  Game.cpp  Game.h  Main.cpp
Game/Assets/: badTempLevel.txt
Game/Shaders/: color.frag  color.vert  copyScreen.frag  hdrGamma.frag  instance.vert  phong.frag  phong.vert  screen.vert  skybox.frag  skybox.vert  texture.frag  texture.vert
Game/Shaders/Animation/: skinned.vert
Game/Shaders/EnvironmentMapping/: environmentMap.vert  reflection.frag  refraction.frag
Game/Shaders/Postprocess/: blurKernel.frag  edgeDetectKernel.frag  grayScale.frag  invertedColor.frag  sharpenKernel.frag
Game/Shaders/Postprocess/Bloom/: bloomBlend.frag  bloomBlurHorizontal.frag  bloomBlurVertical.frag  bloomMask.frag
Game/Shaders/Shadow/: pointShadowDepth.frag  pointShadowDepth.geom  pointShadowDepth.vert  shadowDebug.frag  shadowDepth.frag  shadowDepth.vert
Game/Source/: Game.cpp  Game.h
Game2D/: CMakeLists.txt
Game2D/Shaders/: sprite.frag  sprite.vert  text.frag  text.vert  uiBox.frag  uiBox.vert
Game2D/Source/: Asteroid.cpp  Asteroid.h  Game.cpp  Game.h  Laser.cpp  Laser.h  Ship.cpp  Ship.h
Libraries/Assimp/lib/win/: assimp-vc142-mtd.lib  assimp-vc143-mt.lib
Renderer01/: CMakeLists.txt
Renderer01/Shaders/: color.frag  color.vert  texture.frag  texture.vert
Renderer01/Source/: Game.cpp  Game.h
Shaders/: colorFS.glsl  colorTextureFS.glsl  colorTextureVS.glsl  colorVS.glsl  copyScreenFS.glsl  hdrGammaFS.glsl  instanceFS.glsl  instanceVS.glsl  phongFS.glsl  phongVS.glsl  positionVS.glsl  reflectionFS.glsl  reflectionVS.glsl  refractionFS.glsl  screenFS.glsl  shadowDebugFS.glsl  shadowDepthFS.glsl  shadowDepthVS.glsl  simpleFS.glsl  simpleLightFS.glsl  simpleLightVS.glsl  simpleVS.glsl  skyboxFS.glsl  skyboxVS.glsl  textureFS.glsl  textureVS.glsl
Shaders/Animation/: skinnedVS.glsl
Shaders/EnvironmentMapping/: environmentMapVS.glsl  reflectionFS.glsl  refraction.frag  refractionFS.glsl
Shaders/Postprocess/: edgeDetectKernelFS.glsl  invertedColor.frag  sharpenKernelFS.glsl
Shaders/Postprocess/Bloom/: bloomBlurFS.glsl  bloomBlurHorizontal.frag  bloomBlurHorizontalFS.glsl  bloomBlurVerticalFS.glsl  bloomMask.frag  bloomMaskFS.glsl
Shaders/Shadow/: shadowDepthVS.glsl
Template/: CMakeLists.txt
Template/Source/: Game.cpp  Game.h  Main.cpp
include/glad/: glad.h
